automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>CSS Practice</title>
 </head>
 <body>
-	<div id="title-section">
+	<div id="title-section" class="blacktea">
     <h1>The Ultimate CSS Walkthrough</h1>
     <h2>An Introduction to Cascading Style Sheets</h2>
   </div>
