--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div id="title-section" class="blacktea">
-    <h1>The Ultimate CSS Walkthrough</h1>
+    <h1>Sara's Ultimate CSS Walkthrough</h1>
     <h2>An Introduction to Cascading Style Sheets</h2>
   </div>
   <hr>
