automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="title-section" class="blacktea">
     <h1>Sara's Ultimate CSS Walkthrough</h1>
-    <h2> - An Introduction to Cascading Style Sheets - </h2>
+    <h2>An Introduction to Cascading Style Sheets</h2>
   </div>
   <hr>
   <div id="welcome">
