--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
   <hr>
   <div class="info-section">
-    <h3>What is CSS again?</h3>
+    <h3>What the heck is CSS?</h3>
     <p>CSS stands for Cascading Style Sheets. We use CSS to apply style and formatting to websites. It is a good practice as a programmer to keep <em>content</em> and <em>styling</em> separate. It helps keep our code organized, easy to read, and reuseble. CSS written for one page can be linked by multiple pages.  Different pages on a website can share a local file, often stored in a CSS subfolder. Different websites can even share CSS that is hosted remotely and accessed when a page loads.</p>
   </div>
   <hr>
